2010-04-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* doc/RELEASE_NOTES_4.0.3.2202: Release 4.0.3.2202.

	* vm-sound-pulse/sqUnixSoundPulseAudio.c: New version from Derek
	O'Connell as used in Scratch.  Fixes bad behaviour on Karmic.

2010-04-12  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src: UUIDPlugin is now internal.

	* Makefile: Use cmake/configure.

2010-04-11  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* doc/RELEASE_NOTES_4.0.3.2196: Release 4.0.3.2196.

	* plugins/MIDIPlugin/config.cmake: Enable ALSA MIDI support if
	alsa/asoundlib.h and linasound are available.

	* plugins/MIDIPlugin/sqUnixMIDI.c: Include "debug.h".

	* plugins/MIDIPlugin/sqUnixMIDIALSA.inc: Change invocations of
	debugf(x) to pass a single argument.

	* plugins/SqueakFFIPrims/config.cmake: Add sqManualSurface.c to
	plugin sources list.

2010-04-10  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* CMakeLists.txt: Change VM_HOST_CPU from x86_64 to i386 if
	CMAKE_ARCH_FLAGS is -m32.

	* cmake/squeak.sh.in (PATH): Find path to binary using pwd -p if
	it appears to be available.

	* cmake/squeak.in: Attempt to fix broken locales by copying LANG
	to LC_ALL if the latter is unset.

	* cmake/configure: Pass SVN revision of ChangeLog to cmake as
	PLATFORM_SOURCE_VERSION.

	* vm/config.cmake: Define PLATFORM_SOURCE_VERSION in config.h.

2010-04-09  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-X11/sqUnixX11.c (getSelectionChunk): Don't beep when
	the selection owner refuses to transfer data.

	* vm/sqUnixExternalPrims.c (ioLoadModule): Try loading a plugin
	from the name without additional prefix/suffix to permit
	fully-specified names or paths.

2010-04-06  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/SqueakFFIPrims/config.cmake: Use correct asm for -m32 on x86_64.

2010-04-02  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
